# ansi_colle-mods

./: .gitignore  .markdownlint.yaml  .nvim.lua  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  README.md  galaxy.yml  pyproject.toml  requirements.yml  taskfile.dist.yml
.github/workflows/: ansible-lint.yml  ansible.yml  gh_pages.yml
changelogs/: .plugin-cache.yaml  changelog.yaml  config.yaml
changelogs/fragments/: major_changes.yaml  summary.yaml
meta/: runtime.yml
mods/: README.md  galaxy.yml
mods/changelogs/: config.yaml
mods/changelogs/fragments/: major_changes.yaml  summary.yaml
mods/playbooks/: test-winget.yml  test-winget_cmd.yml  test_winget.yml
mods/plugins/modules/: winget_cmd.ps1
playbooks/: cmp_pkg.yml  export_xlsx.yml  install.yml  ping.yml  test_winget.yml
plugins/doc_fragments/: attributes.py
plugins/modules/: cmp_pkg.py  example.py  export_xlsx.py  winget_cmd.ps1  winget_cmd.py
shared/: galaxy.yml
shared/playbooks/: cmp_pkg.yml
shared/plugins/modules/: cmp_pkg.py
