[project]
name = "ansi_colle.mods"
dynamic = ["version"]
description = "Default template for PDM package"
authors = [
    {name = "Chun Pan Yung", email = "31672021+ChunPanYung@users.noreply.github.com"},
]
dependencies = [
  "ansible",
  "tomli-w",
  "pandas",
  "openpyxl"
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
lint = [
  "ansible-lint"
]
doc = [
  "antsibull-docs"
]

[tool.pdm.version]
source = "scm"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
install = "ansible-playbook ansi_colle.mods.install"
changelog = "git-cliff --prepend CHANGELOG.md --unreleased --tag"
