[project]
name = "ansi_colle.mods"
dynamic = ["version"]
description = "Default template for PDM package"
authors = [
    {name = "Chun Pan Yung", email = "31672021+ChunPanYung@users.noreply.github.com"},
]
dependencies = [
  "ansible",
  "tomli-w",
  "pandas",
  "openpyxl"
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
lint = [
  "ansible-lint"
]
doc = [
  "antsibull-docs"
]

[tool.pdm.resolution.overrides]
will-not-work-on-windows-try-from-wsl-instead = "0.1.0"  # ignore ansible-lint install error

[tool.pdm.version]
source = "scm"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
install = "ansible-playbook ansi_colle.mods.install"
changelog = "git-cliff --prepend CHANGELOG.md --unreleased --tag"
docs = "antsibull-docs sphinx-init --use-current --squash-hierarchy ansi_colle.mods --dest-dir"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
