[project]
name = "ansi_colle.mods"

version = "1.4.0"

description = "Custom ansible modules."
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = ["ansible>=12.0.0"]

[dependency-groups]
dev = [
  "ansible-dev-tools>=25.8.3",
  "antsibull-docs>=2.21.0",
  "git-cliff>=2.10.0",
  "go-task-bin>=3.45.4",
  "pre-commit",
  "ruff",
  "validate-pyproject",
  "pandas",
  "openpyxl",
]
